Refactor LaTeX table generation and update output formatting in plot.ipynb

--- a/top_projects/plot.ipynb
+++ b/top_projects/plot.ipynb
@@ -192,67 +192,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "7000c959",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{table}[htbp!]\n",
-      "\\centering\n",
-      "\\caption{Comparison of evaluation results. $\\Delta$ = Model - Baseline.}\n",
-      "\\label{tab:generated_comparison}\n",
-      "\\begin{tabular}{l|l|rrr}\n",
-      "\\toprule\n",
-      "Task & Metric & Vanilla & Non-vanilla & $\\Delta$ \\\\\n",
-      "\\midrule\n",
-      "\\multirow[c]{2}{*}{Arc Challenge} & Acc & 0.45 & 0.46 & \\textcolor{green!70!black}{+0.01} \\\\\n",
-      " & Acc Norm & 0.45 & 0.46 & \\textcolor{green!70!black}{+0.01} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{2}{*}{Arc Easy} & Acc & 0.77 & 0.76 & \\textcolor{red!70!black}{-0.01} \\\\\n",
-      " & Acc Norm & 0.74 & 0.75 & \\textcolor{green!70!black}{+0.01} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{2}{*}{Hellaswag} & Acc & 0.51 & 0.52 & \\textcolor{green!70!black}{+0.01} \\\\\n",
-      " & Acc Norm & 0.67 & 0.66 & \\textcolor{red!70!black}{-0.01} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{2}{*}{Lambada} & Acc & 0.56 & 0.46 & \\textcolor{red!70!black}{-0.10} \\\\\n",
-      " & Perplexity & 7.97 & 7.87 & \\textcolor{green!70!black}{-0.10} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{1}{*}{Nq Open} & Exact Match & 0.07 & 0.08 & \\textcolor{green!70!black}{+0.01} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{2}{*}{Piqa} & Acc & 0.76 & 0.76 & \\textcolor{black}{+0.00} \\\\\n",
-      " & Acc Norm & 0.77 & 0.77 & \\textcolor{black}{+0.00} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{2}{*}{Sciq} & Acc & 0.93 & 0.93 & \\textcolor{black}{+0.00} \\\\\n",
-      " & Acc Norm & 0.89 & 0.89 & \\textcolor{black}{+0.00} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{1}{*}{Triviaqa} & Exact Match & 0.24 & 0.24 & \\textcolor{black}{+0.00} \\\\\n",
-      "\\cmidrule{1-5}\n",
-      "\\multirow[c]{3}{*}{Wikitext} & Bits Per Byte & 0.66 & 0.66 & \\textcolor{black}{+0.00} \\\\\n",
-      " & Byte Perplexity & 1.58 & 1.58 & \\textcolor{black}{+0.00} \\\\\n",
-      " & Word Perplexity & 11.66 & 11.66 & \\textcolor{black}{+0.00} \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\\end{table}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "\n",
+    "exception_to_percentage = [\n",
+    "    \"Perplexity\",\n",
+    "    \"Bits\"\n",
+    "]\n",
+    "\n",
     "def generate_latex_comparison_table(json_sources, baseline_source_name, precision=2):\n",
     "    \"\"\"\n",
-    "    Parses multiple JSON results, uses pandas to structure the data, and\n",
-    "    generates a LaTeX comparison table with a heatmap-style delta column.\n",
+    "    Parses multiple JSON results and generates a LaTeX comparison table where\n",
+    "    each non-baseline cell is colored with a heatmap style based on its\n",
+    "    difference from the baseline.\n",
     "\n",
     "    Args:\n",
     "        json_sources (dict): A dictionary where keys are source names (e.g., \"Model A\")\n",
     "                             and values are the JSON path.\n",
     "        baseline_source_name (str): The name of the source to use as the baseline\n",
-    "                                    for calculating the delta.\n",
+    "                                    for coloring.\n",
     "        precision (int): The number of decimal places for the scores.\n",
     "\n",
     "    Returns:\n",
@@ -293,26 +256,24 @@
     "    # --- 2. Create and Pivot DataFrame ---\n",
     "    df = pd.DataFrame(all_records)\n",
     "    pivot_df = df.pivot_table(index=['task', 'metric'], columns='source', values='value')\n",
-    "    other_sources = [s for s in json_sources if s != baseline_source_name]\n",
-    "    valid_columns = [baseline_source_name] + sorted([s for s in other_sources if s in pivot_df.columns])\n",
+    "    other_sources = sorted([s for s in json_sources if s != baseline_source_name])\n",
+    "    valid_columns = [baseline_source_name] + [s for s in other_sources if s in pivot_df.columns]\n",
     "    pivot_df = pivot_df[valid_columns]\n",
     "\n",
-    "    # --- 3. Calculate Delta and Build LaTeX String ---\n",
+    "    # --- 3. Build LaTeX String with Direct Cell Coloring ---\n",
     "    latex_parts = [\n",
-    "        \"% Add this to your LaTeX preamble: \\\\usepackage[table]{xcolor}\",\n",
+    "        \"% Add this to your LaTeX preamble: \\\\usepackage[table]{xcolor} \\\\usepackage{multirow} \\\\usepackage{booktabs}\",\n",
     "        \"\\\\begin{table}[htbp!]\",\n",
     "        \"\\\\centering\",\n",
-    "        \"\\\\caption{Comparison of evaluation results. $\\\\Delta$ = Model - Baseline.}\",\n",
+    "        \"\\\\caption{Comparison of evaluation results. Colors relative to baseline.}\",\n",
     "        \"\\\\label{tab:generated_comparison}\"\n",
     "    ]\n",
     "    source_names = pivot_df.columns.tolist()\n",
-    "    column_format = \"l|l|\" + \"r\" * (len(source_names) + (len(source_names) > 1))\n",
+    "    column_format = \"l|l|\" + \"r\" * len(source_names)\n",
     "    latex_parts.append(f\"\\\\begin{{tabular}}{{{column_format}}}\")\n",
     "    latex_parts.append(\"\\\\toprule\")\n",
     "    \n",
     "    header_cols = [\"Task\", \"Metric\"] + source_names\n",
-    "    if len(source_names) > 1:\n",
-    "        header_cols.append(\"$\\\\Delta$\")\n",
     "    latex_parts.append(\" & \".join(header_cols) + \" \\\\\\\\\")\n",
     "    latex_parts.append(\"\\\\midrule\")\n",
     "\n",
@@ -320,49 +281,220 @@
     "    for i, (task_name, group) in enumerate(pivot_df.groupby(level='task', sort=True)):\n",
     "        num_metrics = len(group)\n",
     "        for j, ((_, metric_name), row) in enumerate(group.sort_index().iterrows()):\n",
-    "            row_values = [f\"{val:.{precision}f}\" if pd.notna(val) else '---' for val in row]\n",
     "            \n",
-    "            delta_str = \"\"\n",
-    "            if len(source_names) > 1:\n",
-    "                baseline_val = row[baseline_source_name]\n",
-    "                compare_val = row[source_names[1]]\n",
+    "            # --- CORRECTED LOGIC FOR PERCENTAGE CONVERSION ---\n",
+    "            def format_value(val, metric):\n",
+    "                if pd.isna(val):\n",
+    "                    return val\n",
+    "                # Check if the metric is one of the exceptions.\n",
+    "                is_exception = any(ex.lower() in metric.lower() for ex in exception_to_percentage)\n",
+    "                # If it's NOT an exception, multiply by 100.\n",
+    "                if not is_exception:\n",
+    "                    return val * 100\n",
+    "                return val\n",
+    "\n",
+    "            baseline_val = format_value(row[baseline_source_name], metric_name)\n",
+    "            \n",
+    "            # Start the row with the uncolored baseline value\n",
+    "            formatted_cells = [f\"{baseline_val:.{precision}f}\" if pd.notna(baseline_val) else '---']\n",
+    "\n",
+    "            # Process each of the other sources for coloring\n",
+    "            for source in other_sources:\n",
+    "                compare_val = format_value(row.get(source), metric_name)\n",
     "                \n",
     "                if pd.notna(baseline_val) and pd.notna(compare_val):\n",
-    "                    delta = compare_val - baseline_val\n",
+    "                    # For delta calculation, use original non-percentage values for better scaling\n",
+    "                    original_baseline = row[baseline_source_name]\n",
+    "                    original_compare = row.get(source)\n",
+    "                    delta = (original_compare - original_baseline)\n",
     "                    \n",
     "                    # --- Heatmap Logic ---\n",
-    "                    # Normalize delta to a 0-1 range for intensity, cap at a reasonable max\n",
-    "                    # A value of 0.1 delta (10 percentage points) is considered max intensity\n",
     "                    max_delta_for_color = 0.1 \n",
     "                    normalized_delta = min(abs(delta) / max_delta_for_color, 1.0)\n",
-    "                    # Intensity from 0 (white) to 60 (strong color)\n",
-    "                    intensity = int(normalized_delta * 60) \n",
+    "                    intensity = int(normalized_delta * 60)\n",
     "\n",
     "                    is_good = (delta < 0) if \"Perplexity\" in metric_name else (delta > 0)\n",
     "                    color = \"green\" if is_good else \"red\"\n",
     "                    \n",
-    "                    # Use \\cellcolor for the background heatmap\n",
-    "                    delta_str = (f\" & \\\\cellcolor{{{color}!{intensity}}}\"\n",
-    "                                 f\"{{{delta:+.{precision}f}}}\")\n",
+    "                    cell_str = (f\"\\\\cellcolor{{{color}!{intensity}}}\"\n",
+    "                                f\"{{{compare_val:.{precision}f}}}\")\n",
+    "                    formatted_cells.append(cell_str)\n",
     "                else:\n",
-    "                    delta_str = \" & ---\"\n",
-    "\n",
-    "\n",
+    "                    formatted_cells.append('---')\n",
+    "            \n",
+    "            # Join all cells for the final row string\n",
+    "            row_content = \" & \".join(formatted_cells)\n",
     "            if j == 0:\n",
-    "                line = f\"\\\\multirow[c]{{{num_metrics}}}{{*}}{{{task_name}}} & {metric_name} & {' & '.join(row_values)}{delta_str} \\\\\\\\\"\n",
+    "                line = f\"\\\\multirow[c]{{{num_metrics}}}{{*}}{{{task_name}}} & {metric_name} & {row_content} \\\\\\\\\"\n",
     "            else:\n",
-    "                line = f\" & {metric_name} & {' & '.join(row_values)}{delta_str} \\\\\\\\\"\n",
+    "                line = f\" & {metric_name} & {row_content} \\\\\\\\\"\n",
     "            latex_parts.append(line)\n",
     "        \n",
     "        if i < len(pivot_df.index.get_level_values('task').unique()) - 1:\n",
     "            latex_parts.append(f\"\\\\cmidrule{{1-{len(header_cols)}}}\")\n",
     "\n",
     "    latex_parts.extend([\"\\\\bottomrule\", \"\\\\end{tabular}\", \"\\\\end{table}\"])\n",
-    "    print(\"Hey I modify something here\")\n",
-    "    return \"\\n\".join(latex_parts)\n",
+    "    return \"\\n\".join(latex_parts), df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "76a7474c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Add this to your LaTeX preamble: \\usepackage[table]{xcolor} \\usepackage{multirow} \\usepackage{booktabs}\n",
+      "\\begin{table}[htbp!]\n",
+      "\\centering\n",
+      "\\caption{Comparison of evaluation results. Colors relative to baseline.}\n",
+      "\\label{tab:generated_comparison}\n",
+      "\\begin{tabular}{l|l|rrr}\n",
+      "\\toprule\n",
+      "Task & Metric & NTP & MTP & TOP \\\\\n",
+      "\\midrule\n",
+      "\\multirow[c]{2}{*}{Arc Challenge} & Acc & 26.54 & \\cellcolor{green!9}{28.07} & \\cellcolor{green!9}{28.07} \\\\\n",
+      " & Acc Norm & 28.84 & \\cellcolor{green!6}{29.86} & \\cellcolor{green!3}{29.35} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Arc Easy} & Acc & 60.23 & \\cellcolor{green!21}{63.80} & \\cellcolor{green!18}{63.26} \\\\\n",
+      " & Acc Norm & 56.52 & \\cellcolor{green!11}{58.38} & \\cellcolor{green!10}{58.29} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Hellaswag} & Acc & 35.52 & \\cellcolor{red!0}{35.38} & \\cellcolor{red!0}{35.43} \\\\\n",
+      " & Acc Norm & 42.53 & \\cellcolor{green!1}{42.73} & \\cellcolor{green!6}{43.57} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Lambada} & Acc & 36.35 & \\cellcolor{red!6}{35.32} & \\cellcolor{green!4}{37.07} \\\\\n",
+      " & Perplexity & 30.34 & \\cellcolor{red!60}{35.31} & \\cellcolor{green!60}{28.76} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Nq Open} & Exact Match & 1.94 & \\cellcolor{green!2}{2.35} & \\cellcolor{green!1}{2.22} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Piqa} & Acc & 66.92 & \\cellcolor{red!3}{66.27} & \\cellcolor{green!3}{67.46} \\\\\n",
+      " & Acc Norm & 66.65 & \\cellcolor{red!0}{66.49} & \\cellcolor{green!5}{67.57} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Sciq} & Acc & 83.20 & \\cellcolor{green!18}{86.30} & \\cellcolor{green!12}{85.30} \\\\\n",
+      " & Acc Norm & 74.90 & \\cellcolor{green!15}{77.40} & \\cellcolor{green!29}{79.80} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Social Iqa} & Acc & 39.82 & \\cellcolor{red!4}{39.00} & \\cellcolor{red!4}{39.00} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Triviaqa} & Exact Match & 4.93 & \\cellcolor{red!14}{2.55} & \\cellcolor{red!3}{4.37} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{3}{*}{Wikitext} & Bits Per Byte & 0.86 & \\cellcolor{green!16}{0.88} & \\cellcolor{green!1}{0.86} \\\\\n",
+      " & Byte Perplexity & 1.81 & \\cellcolor{red!20}{1.84} & \\cellcolor{red!1}{1.81} \\\\\n",
+      " & Word Perplexity & 23.85 & \\cellcolor{red!60}{26.34} & \\cellcolor{red!60}{24.01} \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mtp_json_file = \"top_evals/zaydzuhri__mtp-340M-4096-model/results_2025-08-20T11-12-35.491684.json\"\n",
+    "vanilla_json_file = \"top_evals/zaydzuhri__vanilla-340M-4096-model/results_2025-08-20T11-23-06.323725.json\"\n",
+    "top_json_file = \"top_evals/zaydzuhri__myopic-340M-4096-model/results_2025-08-20T11-20-54.956874.json\"\n",
     "\n",
-    "non_vanilla_json_file = \"top_evals/zaydzuhri__vanilla-7B-4096-model-test/results_2025-08-19T13-51-01.158842.json\"\n",
-    "latex_output = generate_latex_comparison_table({\"Vanilla\" : json_file, \"Non-vanilla\" : non_vanilla_json_file}, baseline_source_name=\"Vanilla\")\n",
+    "latex_output, df = generate_latex_comparison_table(\n",
+    "    {\"NTP\" : vanilla_json_file, \n",
+    "     \"MTP\" : mtp_json_file,\n",
+    "     \"TOP\" : top_json_file}, \n",
+    "     baseline_source_name=\"NTP\",\n",
+    ")\n",
+    "print(latex_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c8f9fc22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['top_evals/zaydzuhri__myopic-1.8B-4096-model/results_2025-08-20T11-59-09.690564.json', 'top_evals/zaydzuhri__mtp-1.8B-4096-model/results_2025-08-20T12-31-13.727702.json', 'top_evals/zaydzuhri__vanilla-1.8B-4096-model/results_2025-08-20T12-34-56.285949.json', 'top_evals/zaydzuhri__vanilla-340M-4096-model/results_2025-08-20T11-23-06.323725.json', 'top_evals/zaydzuhri__mtp-340M-4096-model/results_2025-08-20T11-12-35.491684.json', 'top_evals/zaydzuhri__top-7B-4096-model/results_2025-08-20T10-46-34.638307.json', 'top_evals/zaydzuhri__myopic-340M-4096-model/results_2025-08-20T11-20-54.956874.json', 'top_evals/zaydzuhri__vanilla-7B-4096-model/results_2025-08-19T13-51-01.158842.json', 'top_evals/zaydzuhri__mtp-7B-4096-model/results_2025-08-20T10-59-16.724946.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from glob import glob\n",
+    "\n",
+    "eval_logs_folder = \"top_evals\"\n",
+    "all_json_files = glob(f\"{eval_logs_folder}/*/*.json\")\n",
+    "print(all_json_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f6ebe055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Add this to your LaTeX preamble: \\usepackage[table]{xcolor} \\usepackage{multirow} \\usepackage{booktabs}\n",
+      "\\begin{table}[htbp!]\n",
+      "\\centering\n",
+      "\\caption{Comparison of evaluation results. Colors relative to baseline.}\n",
+      "\\label{tab:generated_comparison}\n",
+      "\\begin{tabular}{l|l|rrr}\n",
+      "\\toprule\n",
+      "Task & Metric & NTP & MTP & Top \\\\\n",
+      "\\midrule\n",
+      "\\multirow[c]{2}{*}{Arc Challenge} & Acc & 35.58 & \\cellcolor{green!16}{38.40} & \\cellcolor{green!22}{39.25} \\\\\n",
+      " & Acc Norm & 38.65 & \\cellcolor{green!11}{40.61} & \\cellcolor{green!22}{42.32} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Arc Easy} & Acc & 72.81 & \\cellcolor{red!0}{72.69} & \\cellcolor{green!4}{73.48} \\\\\n",
+      " & Acc Norm & 67.05 & \\cellcolor{green!21}{70.66} & \\cellcolor{green!18}{70.12} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Hellaswag} & Acc & 46.03 & \\cellcolor{red!8}{44.61} & \\cellcolor{red!1}{45.75} \\\\\n",
+      " & Acc Norm & 60.05 & \\cellcolor{red!10}{58.29} & \\cellcolor{green!2}{60.45} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Lambada} & Acc & 49.58 & \\cellcolor{red!9}{47.93} & \\cellcolor{green!4}{50.34} \\\\\n",
+      " & Perplexity & 11.38 & \\cellcolor{red!60}{13.69} & \\cellcolor{green!60}{11.19} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Nq Open} & Exact Match & 4.54 & \\cellcolor{red!0}{4.46} & \\cellcolor{green!4}{5.37} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Piqa} & Acc & 73.78 & \\cellcolor{red!9}{72.20} & \\cellcolor{red!3}{73.23} \\\\\n",
+      " & Acc Norm & 73.50 & \\cellcolor{red!2}{73.07} & \\cellcolor{green!3}{74.16} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Sciq} & Acc & 90.20 & \\cellcolor{green!3}{90.70} & \\cellcolor{green!4}{91.00} \\\\\n",
+      " & Acc Norm & 86.40 & \\cellcolor{green!4}{87.20} & \\cellcolor{green!9}{87.90} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Social Iqa} & Acc & 41.56 & \\cellcolor{green!3}{42.12} & \\cellcolor{green!5}{42.53} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Triviaqa} & Exact Match & 11.85 & \\cellcolor{green!24}{15.98} & \\cellcolor{green!42}{18.93} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{3}{*}{Wikitext} & Bits Per Byte & 0.73 & \\cellcolor{green!19}{0.76} & \\cellcolor{red!0}{0.73} \\\\\n",
+      " & Byte Perplexity & 1.66 & \\cellcolor{red!22}{1.70} & \\cellcolor{green!0}{1.66} \\\\\n",
+      " & Word Perplexity & 15.09 & \\cellcolor{red!60}{17.03} & \\cellcolor{green!31}{15.04} \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = \"1.8B\"\n",
+    "\n",
+    "for json_file in all_json_files:\n",
+    "    if size in json_file:\n",
+    "        if \"mtp\" in json_file:\n",
+    "            mtp_json_file = json_file\n",
+    "        elif \"vanilla\" in json_file:\n",
+    "            vanilla_json_file = json_file\n",
+    "        elif \"myopic\" in json_file or \"top\" in json_file:\n",
+    "            top_json_file = json_file\n",
+    "\n",
+    "latex_output, df = generate_latex_comparison_table(\n",
+    "    {\"NTP\" : vanilla_json_file, \n",
+    "     \"MTP\" : mtp_json_file,\n",
+    "     \"Top\" : top_json_file}, \n",
+    "     baseline_source_name=\"NTP\",\n",
+    ")\n",
     "print(latex_output)"
    ]
   }
