Add evaluation results and configuration for zaydzuhri/vanilla-7B-4096-model

--- a/top_projects/plot.ipynb
+++ b/top_projects/plot.ipynb
@@ -427,6 +427,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "id": "0b4fc41e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top_evals/zaydzuhri__mtp-1.8B-4096-model/results_2025-08-20T12-31-13.727702.json\n",
+      "top_evals/zaydzuhri__vanilla-1.8B-4096-model/results_2025-08-20T12-34-56.285949.json\n",
+      "top_evals/zaydzuhri__myopic-1.8B-4096-model/results_2025-08-20T11-59-09.690564.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mtp_json_file)\n",
+    "print(vanilla_json_file)\n",
+    "print(top_json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "id": "f6ebe055",
    "metadata": {},
