Push the last 7B result

--- a/top_projects/plot.ipynb
+++ b/top_projects/plot.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "id": "76a7474c",
    "metadata": {},
    "outputs": [
@@ -401,6 +401,31 @@
     "     baseline_source_name=\"NTP\",\n",
     ")\n",
     "print(latex_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "afde031a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "MTP    0.549709\n",
+       "NTP    0.538886\n",
+       "TOP    0.557166\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['metric'] == 'Acc Norm'].groupby('source')['value'].mean()"
    ]
   },
   {
@@ -515,6 +540,127 @@
     "    {\"NTP\" : vanilla_json_file, \n",
     "     \"MTP\" : mtp_json_file,\n",
     "     \"Top\" : top_json_file}, \n",
+    "     baseline_source_name=\"NTP\",\n",
+    ")\n",
+    "print(latex_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b839ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   source           task    metric     value\n",
+      "1     NTP  Arc Challenge  Acc Norm  0.386519\n",
+      "3     NTP       Arc Easy  Acc Norm  0.670455\n",
+      "5     NTP      Hellaswag  Acc Norm  0.600478\n",
+      "10    NTP           Piqa  Acc Norm  0.735038\n",
+      "12    NTP           Sciq  Acc Norm  0.864000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[df[\"metric\"] == \"Acc Norm\"].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "2b6c4b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "MTP    0.659666\n",
+       "NTP    0.651298\n",
+       "Top    0.669883\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['metric'] == 'Acc Norm'].groupby('source')['value'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "ffda1749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% Add this to your LaTeX preamble: \\usepackage[table]{xcolor} \\usepackage{multirow} \\usepackage{booktabs}\n",
+      "\\begin{table}[htbp!]\n",
+      "\\centering\n",
+      "\\caption{Comparison of evaluation results. Colors relative to baseline.}\n",
+      "\\label{tab:generated_comparison}\n",
+      "\\begin{tabular}{l|l|rrr}\n",
+      "\\toprule\n",
+      "Task & Metric & NTP & MTP & TOP \\\\\n",
+      "\\midrule\n",
+      "\\multirow[c]{2}{*}{Arc Challenge} & Acc & 45.05 & \\cellcolor{red!8}{43.69} & \\cellcolor{red!5}{44.20} \\\\\n",
+      " & Acc Norm & 45.48 & \\cellcolor{green!0}{45.56} & \\cellcolor{green!5}{46.42} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Arc Easy} & Acc & 77.31 & \\cellcolor{green!2}{77.69} & \\cellcolor{green!4}{78.03} \\\\\n",
+      " & Acc Norm & 74.07 & \\cellcolor{red!1}{73.86} & \\cellcolor{green!3}{74.62} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Hellaswag} & Acc & 50.95 & \\cellcolor{red!8}{49.58} & \\cellcolor{green!3}{51.53} \\\\\n",
+      " & Acc Norm & 67.43 & \\cellcolor{red!9}{65.85} & \\cellcolor{green!7}{68.73} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Lambada} & Acc & 55.89 & \\cellcolor{red!16}{53.13} & \\cellcolor{green!6}{57.03} \\\\\n",
+      " & Perplexity & 7.97 & \\cellcolor{red!60}{8.99} & \\cellcolor{green!60}{7.64} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Nq Open} & Exact Match & 7.31 & \\cellcolor{green!0}{7.40} & \\cellcolor{green!2}{7.70} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Piqa} & Acc & 76.33 & \\cellcolor{red!7}{75.08} & \\cellcolor{red!0}{76.17} \\\\\n",
+      " & Acc Norm & 77.04 & \\cellcolor{red!7}{75.73} & \\cellcolor{red!3}{76.39} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{2}{*}{Sciq} & Acc & 92.90 & \\cellcolor{green!0}{93.00} & \\cellcolor{green!9}{94.50} \\\\\n",
+      " & Acc Norm & 88.60 & \\cellcolor{green!4}{89.30} & \\cellcolor{green!18}{91.60} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Social Iqa} & Acc & --- & --- & --- \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{1}{*}{Triviaqa} & Exact Match & 24.28 & \\cellcolor{red!5}{23.36} & \\cellcolor{green!39}{30.90} \\\\\n",
+      "\\cmidrule{1-5}\n",
+      "\\multirow[c]{3}{*}{Wikitext} & Bits Per Byte & 0.66 & \\cellcolor{green!18}{0.69} & \\cellcolor{green!0}{0.66} \\\\\n",
+      " & Byte Perplexity & 1.58 & \\cellcolor{red!20}{1.62} & \\cellcolor{red!0}{1.58} \\\\\n",
+      " & Word Perplexity & 11.66 & \\cellcolor{red!60}{13.09} & \\cellcolor{red!1}{11.67} \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = \"7B\"\n",
+    "\n",
+    "for json_file in all_json_files:\n",
+    "    if size in json_file:\n",
+    "        if \"mtp\" in json_file:\n",
+    "            mtp_json_file = json_file\n",
+    "        elif \"vanilla\" in json_file:\n",
+    "            vanilla_json_file = json_file\n",
+    "        elif \"top\" in json_file or \"top\" in json_file:\n",
+    "            top_json_file = json_file\n",
+    "\n",
+    "latex_output, df = generate_latex_comparison_table(\n",
+    "    {\"NTP\" : vanilla_json_file, \n",
+    "     \"MTP\" : mtp_json_file,\n",
+    "     \"TOP\" : top_json_file}, \n",
     "     baseline_source_name=\"NTP\",\n",
     ")\n",
     "print(latex_output)"
