--- a/unsloth/gpt_oss_plot.ipynb
+++ b/unsloth/gpt_oss_plot.ipynb
@@ -109,23 +109,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54749f08",
+   "metadata": {},
+   "source": [
+    "# Retrieve Table from Wandb"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6737fcc4",
+   "execution_count": 1,
+   "id": "a293fea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /Users/erland/.netrc\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33merlandpg\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "WANDB_API_KEY = os.getenv(\"WANDB_API_KEY\")\n",
+    "wandb.login(key=WANDB_API_KEY)\n",
+    "\n",
+    "api = wandb.Api()\n",
+    "\n",
+    "def fetch_wandb_runs(run_name: str) -> pd.DataFrame:\n",
+    "    print(f'Fetching runs from project: {run_name}...')\n",
+    "    runs = api.runs(run_name)\n",
+    "\n",
+    "    print(f'Found {len(runs)} runs. Processing...')\n",
+    "\n",
+    "    summary_list = []\n",
+    "\n",
+    "    for run in runs:\n",
+    "        config = {k: v for k, v in run.config.items() if not k.startswith('_')}\n",
+    "\n",
+    "        summary = {k : v for k, v in run.summary._json_dict.items() if not k.startswith('_')}\n",
+    "\n",
+    "        run_data = {**config, **summary}\n",
+    "\n",
+    "        run_data[\"name\"] = run.name\n",
+    "        run_data[\"id\"] = run.id\n",
+    "\n",
+    "        summary_list.append(run_data)\n",
+    "\n",
+    "    runs_df = pd.DataFrame(summary_list)\n",
+    "\n",
+    "    return runs_df\n",
+    "\n",
+    "# runs_df = fetch_wandb_runs(\"erlandpg/unsloth_experiment\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "120ae09b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
+       "<Runs erlandpg/unsloth_experiment>"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Save to pdf"
+    "run_name = \"erlandpg/unsloth_experiment\"\n",
+    "runs = api.runs(path=run_name)\n",
+    "runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "80cfe884",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run.id = 'majg5vdv'\n",
+      "      _runtime    _timestamp  train/loss  train/epoch  train/grad_norm  \\\n",
+      "0   107.235200  1.756318e+09      3.5830        0.004        85.537689   \n",
+      "1   177.232775  1.756319e+09      5.6175        0.008       118.719048   \n",
+      "2   247.091143  1.756319e+09      4.1381        0.012        84.009499   \n",
+      "3   316.792532  1.756319e+09      4.8111        0.016       102.600395   \n",
+      "4   386.540596  1.756319e+09      3.0919        0.020        85.541588   \n",
+      "5   456.078787  1.756319e+09      0.4923        0.024        24.638472   \n",
+      "6   525.758722  1.756319e+09      0.0624        0.028         2.079802   \n",
+      "7   595.503917  1.756319e+09      0.0212        0.032         0.375775   \n",
+      "8   665.187793  1.756319e+09      0.0165        0.036         0.238284   \n",
+      "9   734.832268  1.756319e+09      0.0144        0.040         0.167733   \n",
+      "10  735.447809  1.756319e+09         NaN        0.040              NaN   \n",
+      "\n",
+      "    train/global_step  train/learning_rate  _step  \n",
+      "0                   1              0.00000      0  \n",
+      "1                   2              0.00004      1  \n",
+      "2                   3              0.00008      2  \n",
+      "3                   4              0.00012      3  \n",
+      "4                   5              0.00016      4  \n",
+      "5                   6              0.00020      5  \n",
+      "6                   7              0.00016      6  \n",
+      "7                   8              0.00012      7  \n",
+      "8                   9              0.00008      8  \n",
+      "9                  10              0.00004      9  \n",
+      "10                 10                  NaN     10  \n"
+     ]
+    }
+   ],
+   "source": [
+    "for run in runs:\n",
+    "    if run.id in gpt_oss_runs:\n",
+    "        print(f\"{run.id = }\")\n",
+    "        print(run.history())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "74575b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run.id = 'majg5vdv'\n",
+      "      _runtime    _timestamp  train/loss  train/epoch  train/grad_norm  \\\n",
+      "0   107.235200  1.756318e+09      3.5830        0.004        85.537689   \n",
+      "1   177.232775  1.756319e+09      5.6175        0.008       118.719048   \n",
+      "2   247.091143  1.756319e+09      4.1381        0.012        84.009499   \n",
+      "3   316.792532  1.756319e+09      4.8111        0.016       102.600395   \n",
+      "4   386.540596  1.756319e+09      3.0919        0.020        85.541588   \n",
+      "5   456.078787  1.756319e+09      0.4923        0.024        24.638472   \n",
+      "6   525.758722  1.756319e+09      0.0624        0.028         2.079802   \n",
+      "7   595.503917  1.756319e+09      0.0212        0.032         0.375775   \n",
+      "8   665.187793  1.756319e+09      0.0165        0.036         0.238284   \n",
+      "9   734.832268  1.756319e+09      0.0144        0.040         0.167733   \n",
+      "10  735.447809  1.756319e+09         NaN        0.040              NaN   \n",
+      "\n",
+      "    train/global_step  train/learning_rate  _step  \n",
+      "0                   1              0.00000      0  \n",
+      "1                   2              0.00004      1  \n",
+      "2                   3              0.00008      2  \n",
+      "3                   4              0.00012      3  \n",
+      "4                   5              0.00016      4  \n",
+      "5                   6              0.00020      5  \n",
+      "6                   7              0.00016      6  \n",
+      "7                   8              0.00012      7  \n",
+      "8                   9              0.00008      8  \n",
+      "9                  10              0.00004      9  \n",
+      "10                 10                  NaN     10  \n"
+     ]
+    }
+   ],
+   "source": [
+    "gpt_oss_runs = [\"majg5vdv\"]\n",
+    "\n",
+    "for run in runs:\n",
+    "    if run.id in gpt_oss_runs:\n",
+    "        print(f\"{run.id = }\")\n",
+    "        print(run.history())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "740622a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found run: majg5vdv\n",
+      "[{'_runtime': 107.235200291, '_timestamp': 1756318456.0950406, 'train/loss': 3.583, 'train/epoch': 0.004, 'train/grad_norm': 85.53768920898438, 'train/global_step': 1, 'train/learning_rate': 0, '_step': 0}, {'_runtime': 177.232774556, '_timestamp': 1756318526.0926187, 'train/loss': 5.6175, 'train/epoch': 0.008, 'train/grad_norm': 118.71904754638672, 'train/global_step': 2, 'train/learning_rate': 4e-05, '_step': 1}, {'_runtime': 247.091142611, '_timestamp': 1756318595.950906, 'train/loss': 4.1381, 'train/epoch': 0.012, 'train/grad_norm': 84.0094985961914, 'train/global_step': 3, 'train/learning_rate': 8e-05, '_step': 2}, {'_runtime': 316.792532103, '_timestamp': 1756318665.6523652, 'train/loss': 4.8111, 'train/epoch': 0.016, 'train/grad_norm': 102.60039520263672, 'train/global_step': 4, 'train/learning_rate': 0.00012, '_step': 3}, {'_runtime': 386.540596311, '_timestamp': 1756318735.4003646, 'train/loss': 3.0919, 'train/epoch': 0.02, 'train/grad_norm': 85.54158782958984, 'train/global_step': 5, 'train/learning_rate': 0.00016, '_step': 4}, {'_runtime': 456.078786783, '_timestamp': 1756318804.938717, 'train/loss': 0.4923, 'train/epoch': 0.024, 'train/grad_norm': 24.638471603393555, 'train/global_step': 6, 'train/learning_rate': 0.0002, '_step': 5}, {'_runtime': 525.75872172, '_timestamp': 1756318874.6184733, 'train/loss': 0.0624, 'train/epoch': 0.028, 'train/grad_norm': 2.079801559448242, 'train/global_step': 7, 'train/learning_rate': 0.00016, '_step': 6}, {'_runtime': 595.503917317, '_timestamp': 1756318944.3636556, 'train/loss': 0.0212, 'train/epoch': 0.032, 'train/grad_norm': 0.37577521800994873, 'train/global_step': 8, 'train/learning_rate': 0.00012, '_step': 7}, {'_runtime': 665.187793483, '_timestamp': 1756319014.0477147, 'train/loss': 0.0165, 'train/epoch': 0.036, 'train/grad_norm': 0.2382841557264328, 'train/global_step': 9, 'train/learning_rate': 8e-05, '_step': 8}, {'_runtime': 734.832268137, '_timestamp': 1756319083.6921616, 'train/loss': 0.0144, 'train/epoch': 0.04, 'train/grad_norm': 0.16773313283920288, 'train/global_step': 10, 'train/learning_rate': 4e-05, '_step': 9}, {'_runtime': 735.447809401, '_timestamp': 1756319084.3077574, 'train/loss': None, 'train/epoch': 0.04, 'train/grad_norm': None, 'train/global_step': 10, 'train/learning_rate': None, '_step': 10}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import wandb\n",
+    "\n",
+    "# Initialize the W&B API\n",
+    "api = wandb.Api()\n",
+    "\n",
+    "# Example: Replace with your entity and project name\n",
+    "runs = api.runs(\"erlandpg/unsloth_experiment\")\n",
+    "\n",
+    "gpt_oss_runs = [\"majg5vdv\"]\n",
+    "\n",
+    "for run in runs:\n",
+    "    if run.id in gpt_oss_runs:\n",
+    "        print(f\"Found run: {run.id}\")\n",
+    "\n",
+    "        # Use scan_history to request specific system metrics.\n",
+    "        # The exact key for GPU usage can vary.\n",
+    "        # Check your run's \"System\" tab in the W&B UI to find the precise key.\n",
+    "        # Common keys are \"system.gpu.0.gpu\" or \"system.gpu.0.utilization\".\n",
+    "        history = run.scan_history()\n",
+    "\n",
+    "        # Create a list from the history iterator\n",
+    "        gpu_utilization_data = list(history)\n",
+    "        print(gpu_utilization_data)\n",
+    "\n",
+    "        # if gpu_utilization_data:\n",
+    "        #     print(\"Successfully retrieved GPU utilization data.\")\n",
+    "        #     # Print the first 5 data points as an example\n",
+    "        #     for i, data_point in enumerate(gpu_utilization_data[:5]):\n",
+    "        #          print(f\"  Point {i+1}: Timestamp={data_point['_timestamp']}, GPU Utilization={data_point['gpu.allocatedBytes']}%\")\n",
+    "        # else:\n",
+    "        #     print(\"Could not find GPU utilization data for this run with the specified key.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ad9139",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Initialize the wandb API\n",
+    "api = wandb.Api()\n",
+    "\n",
+    "# --- Specify your run's path ---\n",
+    "# You can find this on the run page in the W&B UI.\n",
+    "# It looks like: \"entity/project/run_id\"\n",
+    "run_path = \"erlandpg/unsloth_experiment/\"\n",
+    "\n",
+    "try:\n",
+    "    # Get the run object\n",
+    "    run = api.run(run_path)\n",
+    "\n",
+    "    # Scan the run's history for specific keys (metrics)\n",
+    "    # We are interested in GPU memory and the step/epoch\n",
+    "    # Note: The exact metric name might vary. Common names include:\n",
+    "    # 'cuda.memory.allocated', 'gpu.0.memory_allocated', etc.\n",
+    "    # Check your run's \"System\" charts in the UI to confirm the exact key.\n",
+    "    history = run.scan_history(keys=['_step', 'cuda.memory.allocated'])\n",
+    "\n",
+    "    # Convert the history to a pandas DataFrame\n",
+    "    gpu_stats_df = pd.DataFrame(history)\n",
+    "\n",
+    "    # --- Optional: Clean up the data ---\n",
+    "    # The 'cuda.memory.allocated' column might contain None for steps where it wasn't logged.\n",
+    "    gpu_stats_df.dropna(inplace=True)\n",
+    "\n",
+    "    # Display the first few rows of the DataFrame\n",
+    "    print(\"GPU Memory Stats:\")\n",
+    "    print(gpu_stats_df.head())\n",
+    "\n",
+    "    # --- Export to a CSV file ---\n",
+    "    csv_filename = f\"{run.id}_gpu_memory.csv\"\n",
+    "    gpu_stats_df.to_csv(csv_filename, index=False)\n",
+    "    print(f\"\\nSuccessfully exported data to {csv_filename} 📄\")\n",
+    "\n",
+    "except wandb.errors.CommError as e:\n",
+    "    print(f\"Error: Could not find the run at path '{run_path}'. Please check the entity, project, and run ID.\")\n",
+    "    print(f\"Details: {e}\")"
    ]
   }
  ],
